--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,20 @@
 spring:
   datasource:
+    driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: primesoft
+    
  
   jpa:
      properties:
           hibernate:
-                jdbc.lob.non_contextual_creation= true
-                dialect= org.hibernate.dialect.PostgreSQLDialect
-                ddl-auto= update
+                jdbc.lob.non_contextual_creation: true
+                dialect: org.hibernate.dialect.PostgreSQLDialect
+                ddl-auto: update
 server:
    port: 9099
   
-My application Properties: spring.batch.job.enabled=false
+My application Properties: 
+      spring.batch.job.enabled: false
+
