--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,14 @@ server:
 My application Properties: 
       spring.batch.job.enabled: false
 
+emp-api:
+  messages:
+    ordSaveSucc: Order Saved Successfully
+    ordSaveFail: Order Saving Failed
+    ordUpdateSucc: Order Updated Successfully
+    ordUpdateFail: Order Update Failed
+    ordDeleteSucc: Order Deleted Successfully
+    ordDeleteFail: Order Deletion Failed
+    ordFoundSucc: Order  found 
+    ordFoundFail: Order not found
+    
